--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 version: '3.8'
 
 services:
@@ -18,6 +19,9 @@ services:
     restart: always
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data  # ✅ Added volume for Redis persistence
 
 volumes:
   postgres_data:
+  redis_data:  # ✅ Added missing redis_data volume
